feat(init): init

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,8 @@
 <body>
   哈哈
   <!-- <img src="../public/images/bg.jpg" /> -->
+  <div class="container">
+    <button id="btn">请求数据</button>
+  </div>
 </body>
 </html>
